; ModuleID = '/home/carl/AnghaBench/tengine/modules/ngx_http_lua_module/t/data/fake-module/extr_ngx_http_fake_module.c_ngx_http_fake_merge_loc_conf.c'
source_filename = "/home/carl/AnghaBench/tengine/modules/ngx_http_lua_module/t/data/fake-module/extr_ngx_http_fake_module.c_ngx_http_fake_merge_loc_conf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ngx_http_fake_module = common dso_local global i32 0, align 4
@NGX_LOG_ALERT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [45 x i8] c"get module loc conf failed in merge loc conf\00", align 1
@NGX_CONF_ERROR = common dso_local global i8* null, align 8
@NGX_CONF_OK = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, i8*, i8*)* @ngx_http_fake_merge_loc_conf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @ngx_http_fake_merge_loc_conf(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i32, i32* @ngx_http_fake_module, align 4
  %11 = call i32* @ngx_http_conf_get_module_loc_conf(i32* %9, i32 %10)
  store i32* %11, i32** %8, align 8
  %12 = load i32*, i32** %8, align 8
  %13 = icmp eq i32* %12, null
  br i1 %13, label %14, label %19

14:                                               ; preds = %3
  %15 = load i32, i32* @NGX_LOG_ALERT, align 4
  %16 = load i32*, i32** %5, align 8
  %17 = call i32 @ngx_conf_log_error(i32 %15, i32* %16, i32 0, i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str, i64 0, i64 0))
  %18 = load i8*, i8** @NGX_CONF_ERROR, align 8
  store i8* %18, i8** %4, align 8
  br label %21

19:                                               ; preds = %3
  %20 = load i8*, i8** @NGX_CONF_OK, align 8
  store i8* %20, i8** %4, align 8
  br label %21

21:                                               ; preds = %19, %14
  %22 = load i8*, i8** %4, align 8
  ret i8* %22
}

declare dso_local i32* @ngx_http_conf_get_module_loc_conf(i32*, i32) #1

declare dso_local i32 @ngx_conf_log_error(i32, i32*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
